Sunday, 26th October, Ron Steinke <rsteinke@w-link.net>

	* Added the capacity to have multiple timeouts with
	  the same name, as long as they are owned by different
	  object instances. This fixes a problem with the code
	  that allows multiple simultaneous Connection instances.

Thursday, 23rd October, Simon Goodall <simon@simongoodall.co.uk>
	* Fixed configure.ac to use eris-poll-glib-1.2.pc in second glib test

Monday, 20th October, James Turner <james@worldforge.org>

	* Add ProjectBuilder project - currently requires a modified
	  libsigc++ framework which I'll upload to FTP at some point.

Saturday, 20th September, Ron Steinke <rsteinke@w-link.net>

	* Fixed test code so it acutally builds, mostly Atlas
	  stuff and changing pollDefault to PollDefault (which is
	  odd, because it's _never_ been pollDefault).

Saturday, 23rd August, Al Riddoch <alriddoch@zepler.org>

	* Eris/BaseConnection.cpp: Switch to using skstream::isReady()
	  instead of the deprecated is_ready().

Friday, 22th August, Ron Steinke <rsteinke@w-link.net>

	* Made Poll::new_timeout_ static to keep the Timeout
	  constructor from instantiating the poll. Otherwise
	  static timeouts instantiate PollDefault before
	  we can set the poll instance.

Friday, 22nd August, James Turner <james@worldforge.org>

	* Rename configure.in to configure.ac, since we require the newer
	  version. This stops some autoconf versions moaning about the name,
	  and helps scripts which detect which autoconf to run by
	  examining configure.in
	* Also add an AC_PREREQ, just for paranoia's sake.
	* Fix autogen.sh for the new name

Sunday, 17th August, Ron Steinke <rsteinke@w-link.net>

	* Eris/UIFactory.*: Fixes to UI code for change
	  to atlas-transitional.

Monday, 11th August, James Turner <james@worldforge.org>

	* Fix a dumb bug I introduced in June, in handling server-
	  commaned LOGOUTs. Essentially, I failed to pickup the
	  anonymous ClassDispatcher below :op:, and hence was