@@ -1,3 +1,9 @@
+Sunday, 2nd November, Ron Steinke <rsteinke@w-link.net>
+
+	* Replaced Time::Stamp class with a typedef to
+	  WFMath::TimeStamp (which was originally a copy
+	  of Time::Stamp).
+
 Sunday, 26th October, Ron Steinke <rsteinke@w-link.net>
 
 	* Added the capacity to have multiple timeouts with
